--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,6 @@ repositories {
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 }
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
