--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,8 @@
 group 'hu.szeged.ladanyi'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'java'
-
-sourceCompatibility = 1.5
-
+apply plugin: 'application'
+mainClassName = "Main"
 repositories {
     mavenCentral()
 }
@@ -12,6 +10,7 @@ repositories {
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 }
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
 }
